adaptive main-page and about

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header ">
             <div class="container ">
                 <div class="header__wrapper">
                     <a href="index.html" class ="header__logo">
@@ -42,7 +42,7 @@
                         <div class="main-page__wrapper">
                             <div class="main-page__text-content">
                                 <p class="main-page__suptitle suptitle">Game Tournament Here</p>
-                                <h1 class="main-page__title title">New <span class="main-page__title--red">Games<br></span> That You <span class="main-page__title--white">Enjoy</span></h1>
+                                <h1 class="main-page__title title">New <span class="main-page__title--red">Games</span> That You <span class="main-page__title--white">Enjoy</span></h1>
                                 <p class="main-page__text text">Gaming and Sports Template that is designed to build modern Online Game, Gaming News Portal, Gaming Online News Portal, and other News services websites and it is suitable for any kind of small business activity.</p>
                                 <div class="main-page__wrapper-btns">
                                     <a href="#" class="main-page__started-btn btn-started">Get Started for Free</a>
