--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="container ">
                 <div class="header__wrapper">
                     <a href="index.html" class ="header__logo">
-                        Gamix-G
+                        Gamix-<span>G</span>
                     </a>
                     <div class="header__menu-wrapper">
                         <button class="header__close-btn"><span></span></button>
