popup window and adaptive slider

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+    <div class="popup">
+        <div class="popup__window">
+            <iframe  src="https://www.youtube.com/embed/Y5KCDWi7h9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <button class="popup__close-bth"></button>
+        </div>
+    </div>
     <div class="wrapper">
         <header class="header ">
             <div class="container ">
@@ -82,14 +88,14 @@
                         <div class=" swiper-wrapper">
                           <div class="swiper-slide">
                             <div class="streamer__slide-img">
-                                <a class=" streamer__slide-link" href="#">
+                                <a class="streamer__video-link" href="#">
                                     <img src="./img/streamer/streamer-img2.png" alt="streamer-img">
                                 </a>
                             </div>
                           </div>
                           <div class="swiper-slide">
                             <div class="streamer__slide-img">
-                                <a class=" streamer__video-link" href="#">
+                                <a class="streamer__video-link" href="#">
                                     <img src="./img/streamer/streamer-img1.png" alt="streamer-img">
                                 </a>
                             </div>
@@ -114,7 +120,8 @@
                 </div>
             </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
