--- a/index.html
+++ b/index.html
@@ -118,7 +118,136 @@
                           </div>
                         </div>
                     </div>
-                    <div class="swiper-pagination"></div>
+                    <div class="streamer__swiper-pagination swiper-pagination"></div>
+                </div>
+            </section>
+            <section class="testimonial">
+                <div class="container">
+                    <div class="testimonial__text-wrapper">
+                        <p class="testimonial__suptitle suptitle">Testimonial</p>
+                        <h2 class="testimonial__title modify-title">Gamer <span class="testimonial__title--red">Reviews</span></h2>
+                    </div>
+                    <div class="testimonial__swiper swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide testimonial__slide">
+                                <div class="testimonial__content-img">
+                                    <img data-swiper-parallax-opacity="0.2" data-swiper-parallax="300" src="./img/testimonial/testimonial-img.png" alt="testimonial-img">
+                                </div>
+                                <div class="testimonial__slide-content">
+                                    <div data-swiper-parallax="-200" class="testimonial__stars-wrapper">
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star-half"></use>
+                                        </svg>
+                                    </div>
+                                    <p data-swiper-parallax="200" class="testimonial__slide-text">
+                                        Gaming and Sports Template that is designed to build modern Online Game, Gaming News Portal, Gaming Online News Portal, and other News services websites and it is suitable for any kind of small business activity.
+                                    </p>
+                                    <p data-swiper-parallax="-300" class="testimonial__permission">Dulal HD</p>
+                                    <span class="testimonial__gamer">UX Gamer</span>
+                                </div>
+                            </div>
+                            <div class="swiper-slide testimonial__slide">
+                                <div class="testimonial__content-img">
+                                    <img data-swiper-parallax-opacity="0.2" data-swiper-parallax="100" src="./img/testimonial/testimonial-img.png" alt="testimonial-img">
+                                </div>
+                                <div class="testimonial__slide-content">
+                                    <div class="testimonial__stars-wrapper" data-swiper-parallax="-200">
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star-half"></use>
+                                        </svg>
+                                    </div>
+                                    <p data-swiper-parallax="200" class="testimonial__slide-text">
+                                        Gaming and Sports Template that is designed to build modern Online Game, Gaming News Portal, Gaming Online News Portal, and other News services websites and it is suitable for any kind of small business activity.
+                                    </p>
+                                    <p data-swiper-parallax="-300" class="testimonial__permission">Dulal HD</p>
+                                    <span class="testimonial__gamer">UX Gamer</span>
+                                </div>
+                            </div>
+                            <div class="swiper-slide testimonial__slide">
+                                <div class="testimonial__content-img">
+                                    <img data-swiper-parallax-opacity="0.2" data-swiper-parallax="100" src="./img/testimonial/testimonial-img.png" alt="testimonial-img">
+                                </div>
+                                <div class="testimonial__slide-content">
+                                    <div data-swiper-parallax="-200" class="testimonial__stars-wrapper">
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star-half"></use>
+                                        </svg>
+                                    </div>
+                                    <p data-swiper-parallax="200" class="testimonial__slide-text">
+                                        Gaming and Sports Template that is designed to build modern Online Game, Gaming News Portal, Gaming Online News Portal, and other News services websites and it is suitable for any kind of small business activity.
+                                    </p>
+                                    <p data-swiper-parallax="-300" class="testimonial__permission">Dulal HD</p>
+                                    <span class="testimonial__gamer">UX Gamer</span>
+                                </div>
+                            </div>
+                            <div class="swiper-slide testimonial__slide">
+                                <div class="testimonial__content-img">
+                                    <img data-swiper-parallax-opacity="0.2" data-swiper-parallax="100" src="./img/testimonial/testimonial-img.png" alt="testimonial-img">
+                                </div>
+                                <div class="testimonial__slide-content">
+                                    <div data-swiper-parallax="-200" class="testimonial__stars-wrapper">
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star"></use>
+                                        </svg>
+                                        <svg class="" height="21" width="21">
+                                            <use xlink:href="img/sprite.svg#star-half"></use>
+                                        </svg>
+                                    </div>
+                                    <p data-swiper-parallax="200" class="testimonial__slide-text">
+                                        Gaming and Sports Template that is designed to build modern Online Game, Gaming News Portal, Gaming Online News Portal, and other News services websites and it is suitable for any kind of small business activity.
+                                    </p>
+                                    <p data-swiper-parallax="-300" class="testimonial__permission">Dulal HD</p>
+                                    <span class="testimonial__gamer">UX Gamer</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial__swiper-pagination swiper-pagination"></div>
                 </div>
             </section>
             <a class="scroll-up" href="#">
