--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <!-- <div id="preloader">
         <div id="loader"></div>
       </div> -->
-    <div class="popup">
-        <div class="popup__window">
-            <iframe  src="https://www.youtube.com/embed/Y5KCDWi7h9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="animated  popup">
+        <div class="animated  popup__window">
+            <iframe id="video" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <button class="popup__close-bth"></button>
         </div>
     </div>
@@ -47,6 +47,29 @@
         </header>
         <main class="main"> 
             <section class="main-page">
+                <div class="paralax">
+                    <svg value="-5" class="paralax__item paralax__item--1" height="21" width="21">
+                        <use xlink:href="img/sprite.svg#square"></use>
+                    </svg>
+                    <svg  value="-5" class="paralax__item paralax__item--2" height="23" width="23">
+                        <use xlink:href="img/sprite.svg#сross"></use>
+                    </svg>
+                    <svg value="5" class="paralax__item paralax__item--3" height="23" width="23">
+                        <use xlink:href="img/sprite.svg#сross"></use>
+                    </svg>
+                    <svg value="3" class="paralax__item paralax__item--4" height="27" width="27">
+                        <use xlink:href="img/sprite.svg#circle"></use>
+                    </svg>
+                    <svg value="-5" class="paralax__item--5" height="29" width="50">
+                        <use xlink:href="img/sprite.svg#arrow"></use>
+                    </svg>
+                    <svg value="3" class="paralax__item paralax__item--6" height="27" width="27">
+                        <use xlink:href="img/sprite.svg#circle"></use>
+                    </svg>
+                    <svg value="-5" class="paralax__item paralax__item--7" height="25" width="25">
+                        <use xlink:href="img/sprite.svg#square"></use>
+                    </svg>
+                </div>
                     <div class="container">
                         <div class="main-page__wrapper">
                             <div class="main-page__text-content">
@@ -66,9 +89,32 @@
                     </div>
             </section> 
             <section class="about">
+                <div class="paralax">
+                    <svg value="-5" class="paralax__item paralax__item--21" height="36" width="36">
+                        <use xlink:href="img/sprite.svg#square"></use>
+                    </svg>
+                    <svg  value="5" class="paralax__item paralax__item--22" height="35" width="35">
+                        <use xlink:href="img/sprite.svg#сross"></use>
+                    </svg>
+                    <svg value="3" class="paralax__item paralax__item--23" height="27" width="27">
+                        <use xlink:href="img/sprite.svg#circle"></use>
+                    </svg>
+                    <svg value="-5" class="paralax__item paralax__item--24" height="20" width="33">
+                        <use xlink:href="img/sprite.svg#arrow"></use>
+                    </svg>
+                    <svg value="3" class="paralax__item paralax__item--25" height="27" width="27">
+                        <use xlink:href="img/sprite.svg#circle"></use>
+                    </svg>
+                    <svg value="5" class="paralax__item paralax__item--26" height="36" width="36">
+                        <use xlink:href="img/sprite.svg#square"></use>
+                    </svg>
+                    <svg value="5" class="paralax__item paralax__item--27" height="36" width="36">
+                        <use xlink:href="img/sprite.svg#square"></use>
+                    </svg>
+                </div>
                 <div class="container">
                     <div class="about__wrapper">
-                        <div class="about__img">
+                        <div class="wow fadeInLeft about__img">
                             <img src="./img/about/about-img.svg" alt="Hand with joystick">
                             <div class="about__girl-img"></div>
                         </div>
@@ -268,6 +314,26 @@
                 </div>
             </section>
             <section class="streamer">
+                <div class="paralax">
+                    <svg value="-5" class="paralax__item paralax__item-31" height="36" width="36">
+                        <use xlink:href="img/sprite.svg#square"></use>
+                    </svg>
+                    <svg  value="-5" class="paralax__item paralax__item-32" height="23" width="23">
+                        <use xlink:href="img/sprite.svg#сross"></use>
+                    </svg>
+                    <svg  value="5" class="paralax__item paralax__item-33" height="23" width="23">
+                        <use xlink:href="img/sprite.svg#сross"></use>
+                    </svg>
+                    <svg value="3" class="paralax__item paralax__item-34" height="27" width="27">
+                        <use xlink:href="img/sprite.svg#circle"></use>
+                    </svg>
+                    <svg value="3" class="paralax__item paralax__item-35" height="27" width="27">
+                        <use xlink:href="img/sprite.svg#circle"></use>
+                    </svg>
+                    <svg value="5" class="paralax__item paralax__item-36" height="36" width="36">
+                        <use xlink:href="img/sprite.svg#square"></use>
+                    </svg>
+                </div>
                 <div class="container">
                     <div class="streamer__text-wrapper">
                         <p class="wow tada streamer__suptitle suptitle">Streamer</p>
